# tucoach-ai

./: .gitignore  README.md  docker-compose.yml  k8s_local_aws_deploy.yaml  kind-config.yaml  kind_deploy.sh
.github/workflows/: main.yml
backend/: Dockerfile  README.md  database_and_user_model.py  main.py  requirements.txt
backend/lambdas/: pyproject.toml
backend/lambdas/src/interviews/: handler.py
backend/lambdas/src/websocket/: handler.py
backend/layers/shared/: pyproject.toml
backend/layers/shared/python/: models.py  utils.py
backend/layers/shared/tests/: conftest.py
backend/routes/: auth.py  interview.py  subscription.py
backend/schemas/: interview.py  subscription.py
backend/services/: openai_service.py
backend/utils/: sample.py
doc/: technical_spec.md  websocket_api.md
frontend/: .env.development  .env.production  App.js  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/.github/workflows/: frontend.yml
frontend/pages/: FeedbackPage.js  InterviewPage.js  LoginPage.js
frontend/public/: index.html  manifest.json
frontend/scripts/: README.md  update-env.sh
frontend/src/: App.css  App.js  App.test.js
frontend/src/assets/: README.md
frontend/src/components/: ChatInterface.css  ChatInterface.js  ConnectionStatus.js  ErrorMessage.css  ErrorMessage.js  Header.css  Header.js  InterviewApp.js  LandingPage.js  LoadingSpinner.css  LoadingSpinner.js  Message.css  Message.js  ProtectedRoute.js  VideoDemo.js  WaitlistForm.js
frontend/src/context/: README.md  WebSocketContext.js
frontend/src/hooks/: useWebSocket.js
frontend/src/services/: ApiService.js  README.md  WebSocketService.js
frontend/src/utils/: README.md  storage.js  websocket.js
terraform/: api_gateway.tf  api_gateway_chats.tf  api_gateway_interviews.tf  api_gateway_websocket.tf  cloudfront.tf  cors_module.tf  deploy_frontend.sh  dynamodb.tf  lambda_chats.tf  lambda_interviews.tf  lambda_layers.tf  lambda_websocket.tf  main.tf  outputs.tf  s3.tf  variables.tf
